brain/sources/prod-metadata/objects/Invoice__c/fields/ACH_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACH_Amount__c</fullName>
    <formula>Total_Salary__c * BLANKVALUE(Agreement_Percent__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Salary x Agreement %. Auto-calculated.</inlineHelpText>
    <label>ACH Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>