brain/sources/prod-metadata/objects/Invoice__c/fields/Agreement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Percent__c</fullName>
    <inlineHelpText>Agreement percentage applied to Total Salary to get the ACH Amount (e.g. 20 for 20%).</inlineHelpText>
    <label>Agreement %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>