brain/sources/prod-metadata/objects/Invoice__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>The amount paid so far</description>
    <label>Amount Paid</label>
    <summarizedField>Payment__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>