brain/sources/prod-metadata/objects/Invoice__c/fields/Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary__c</fullName>
    <inlineHelpText>Candidate&apos;s annual salary. Used by the ACH calculator to derive the ACH amount.</inlineHelpText>
    <label>Annual Salary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>