brain/sources/prod-metadata/objects/Invoice__c/fields/Auto_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Send Email</label>
    <type>Checkbox</type>
</CustomField>