brain/sources/prod-metadata/objects/Invoice__c/fields/Bank_Account_Last4__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Last4__c</fullName>
    <description>Masked last 4 digits of the customer&apos;s bank account as returned by QuickBooks Payments. Full account/routing numbers are NEVER stored in Salesforce.</description>
    <inlineHelpText>Masked last 4 digits returned by QuickBooks after the bank account is created. No full bank numbers are stored here.</inlineHelpText>
    <label>Bank Account (Last 4)</label>
    <length>12</length>
    <type>Text</type>
</CustomField>