brain/sources/prod-metadata/objects/Invoice__c/fields/Bank_Setup_Summary__c.field-meta.xml
<CustomField>
    <fullName>Bank_Setup_Summary__c</fullName>
    <description>Masked, human-readable summary of what the CS person did for the bank/payment method during Setup (new bank added / reused existing / skipped in test mode). Never contains full account or routing numbers.</description>
    <inlineHelpText>Masked summary of the bank action taken during setup. No full bank numbers.</inlineHelpText>
    <label>Bank Setup Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>