brain/sources/prod-metadata/objects/Invoice__c/fields/Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Amount__c</fullName>
    <inlineHelpText>Candidate&apos;s bonus, if any. Added to Annual Salary to get Total Salary.</inlineHelpText>
    <label>Bonus (if any)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>