brain/sources/prod-metadata/objects/Invoice__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>