brain/sources/prod-metadata/objects/Invoice__c/fields/Charge_Interest__c.field-meta.xml
<CustomField>
    <fullName>Charge_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, interest is added to the plan (ACH Amount x Interest Rate per Cycle x Number of Cycles).</inlineHelpText>
    <label>Charge Interest</label>
    <type>Checkbox</type>
</CustomField>