brain/sources/prod-metadata/objects/Invoice__c/fields/Day_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Month__c</fullName>
    <inlineHelpText>Day of month to charge (e.g., 15 = 15th of each month)</inlineHelpText>
    <label>Day of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>