brain/sources/prod-metadata/objects/Invoice__c/fields/Days_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Advance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days In Advance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>