brain/sources/prod-metadata/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date when the invoice is due</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>