brain/sources/prod-metadata/objects/Invoice__c/fields/Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date__c</fullName>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>