brain/sources/prod-metadata/objects/Invoice__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <formula>IF(Charge_Interest__c, ACH_Amount__c * BLANKVALUE(Interest_Rate_Per_Cycle__c, 0) * BLANKVALUE(Number_of_Months__c, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When Charge Interest is on: ACH Amount x Interest Rate/Cycle x Number of Cycles. Otherwise 0.</inlineHelpText>
    <label>Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>