brain/sources/prod-metadata/objects/Invoice__c/fields/Interest_Rate_Per_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Per_Cycle__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>Interest rate charged per cycle/EMI (default 2%). Total interest = ACH Amount x this rate x Number of Cycles.</inlineHelpText>
    <label>Interest Rate / Cycle</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>