brain/sources/prod-metadata/objects/Invoice__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>1 = each cycle, 2 = every other cycle, etc.</inlineHelpText>
    <label>Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>