brain/sources/prod-metadata/objects/Invoice__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount for the invoice</description>
    <label>Invoice Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>