brain/sources/prod-metadata/objects/Invoice__c/fields/Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Link__c</fullName>
    <formula>HYPERLINK(
      $Label.QB_Admin_Base_URL &amp; QB_Invoice_Id__c,
     $Label.QB_Admin_Base_URL &amp; QB_Invoice_Id__c,
    &quot;_blank&quot;
)</formula>
    <label>Invoice Link</label>
    <type>Text</type>
</CustomField>