brain/sources/prod-metadata/objects/Invoice__c/fields/Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring__c</fullName>
    <formula>ISPICKVAL(Type__c, &quot;Recurring&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>