brain/sources/prod-metadata/objects/Invoice__c/fields/Last_Recurring_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Recurring_Action__c</fullName>
    <description>The most recent action performed on this recurring plan via the Manage Recurring Plan flow (e.g. Change Amount, Pause, Resume). Used to trigger the recurring-plan change Slack notification.</description>
    <label>Last Recurring Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>