brain/sources/prod-metadata/objects/Invoice__c/fields/Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue__c</fullName>
    <formula>CASE(
    TEXT(Frequency__c),
    &quot;Daily&quot;, Recurring_Amount__c * 30 / Interval__c,
    &quot;Weekly&quot;, Recurring_Amount__c * 4 / Interval__c,
    &quot;Monthly&quot;, Recurring_Amount__c / Interval__c,
    &quot;Yearly&quot;, Recurring_Amount__c / (12 * Interval__c),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>