brain/sources/prod-metadata/objects/Invoice__c/fields/Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months__c</fullName>
    <inlineHelpText>Total cycles (leave blank for unlimited)</inlineHelpText>
    <label>Number of Cycles</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>