brain/sources/prod-metadata/objects/Invoice__c/fields/Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount__c</fullName>
    <formula>IF(
    ISPICKVAL(Type__c, &quot;Recurring&quot;),
    IF(
        ISBLANK(Number_of_Months__c),
        null,
        (Recurring_Amount__c * Number_of_Months__c) - Total_Amount_Collected__c
    ),
    Invoice_Amount__c - Amount_Paid__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>