brain/sources/prod-metadata/objects/Invoice__c/fields/Outstanding_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Cycles__c</fullName>
    <formula>IF(
    ISBLANK(Number_of_Months__c),
    null,
    Number_of_Months__c - Total_Cycles_Completed__c
)</formula>
    <label>Outstanding Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>