brain/sources/prod-metadata/objects/Invoice__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <formula>HYPERLINK(
    $Label.QB_Payment_Base_URL &amp; QB_Invoice_Id__c,
				$Label.QB_Payment_Base_URL &amp; QB_Invoice_Id__c,
    &quot;_blank&quot;
)</formula>
    <label>Payment Link</label>
    <type>Text</type>
</CustomField>