brain/sources/prod-metadata/objects/Invoice__c/fields/Previous_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Billing_Date__c</fullName>
    <label>Previous Billing Date</label>
    <type>Date</type>
</CustomField>