brain/sources/prod-metadata/objects/Invoice__c/fields/QB_Bank_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Bank_Account_Id__c</fullName>
    <description>QuickBooks Payments bank-account id returned when the customer&apos;s bank account was created via the Send Bank Details flow.</description>
    <label>QB Bank Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>