brain/sources/prod-metadata/objects/Invoice__c/fields/QB_Created_From__c.field-meta.xml
<CustomField>
    <fullName>QB_Created_From__c</fullName>
    <label>QB Created From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>