brain/sources/prod-metadata/objects/Invoice__c/fields/QB_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer_Id__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Lead__r.QB_Customer_ID__c)),
    Lead__r.QB_Customer_ID__c,
    IF(
        NOT(ISBLANK(Candidate__r.QB_Customer_ID__c)),
        Candidate__r.QB_Customer_ID__c,
        &quot;&quot;
    )
)</formula>
    <label>QB Customer Id</label>
    <type>Text</type>
</CustomField>