brain/sources/prod-metadata/objects/Invoice__c/fields/QB_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>QB_Doc_Number__c</fullName>
    <inlineHelpText>QuickBooks invoice document number (auto-generated by QuickBooks when Custom Transaction Numbers is off).</inlineHelpText>
    <label>QB Doc Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>