brain/sources/prod-metadata/objects/Invoice__c/fields/QB_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_Email_Status__c</fullName>
    <label>QB Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NotSet</fullName>
            </value>
            <value>
                <fullName>EmailSent</fullName>
            </value>
            <value>
                <fullName>NeedToSend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>