brain/sources/prod-metadata/objects/Invoice__c/fields/QB_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice_Id__c</fullName>
    <externalId>true</externalId>
    <label>QB Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>