brain/sources/prod-metadata/objects/Invoice__c/fields/QB_Recur_Data_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Recur_Data_Ref__c</fullName>
    <description>QuickBooks RecurDataRef.value of the recurring template. Every Sales Receipt QuickBooks auto-generates from this plan carries the same RecurDataRef, so incoming receipt webhooks are matched back to this plan on this field.</description>
    <externalId>true</externalId>
    <label>QB Recur Data Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>