brain/sources/prod-metadata/objects/Invoice__c/fields/QB_Recurring_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Recurring_ID__c</fullName>
    <externalId>true</externalId>
    <label>QB Recurring ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>