brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount__c</fullName>
    <label>Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>