brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Deposit_Account__c</fullName>
    <defaultValue>&quot;Undeposited Funds&quot;</defaultValue>
    <label>Recurring Deposit Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>