brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_Description__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Description__c</fullName>
    <label>Recurring Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>