brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurring_End_Date__c</fullName>
    <label>Recurring End Date</label>
    <type>Date</type>
</CustomField>