brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment_Method__c</fullName>
    <label>Recurring Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>ACH/Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>