brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_Plan__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Plan__c</fullName>
    <inlineHelpText>The plan selected for this recurring receipt (from the QB_Plan custom setting). Its QuickBooks Item Number is looked up from the custom setting when the receipt is created.</inlineHelpText>
    <label>Recurring Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>