brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Start_Date__c</fullName>
    <label>Recurring Start Date</label>
    <type>Date</type>
</CustomField>