brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_Status__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Status__c</fullName>
    <label>Recurring Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment Method</fullName>
            </value>
            <value>
                <fullName>Payment Method Not Added</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>