brain/sources/prod-metadata/objects/Invoice__c/fields/Recurring_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Template_Name__c</fullName>
    <inlineHelpText>e.g., &quot;Career Coaching - Monthly&quot;</inlineHelpText>
    <label>Recurring Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>