brain/sources/prod-metadata/objects/Invoice__c/fields/Schedule_Description__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Description__c</fullName>
    <formula>&quot;Every &quot; &amp;
IF(Interval__c = 1, &quot;&quot;, TEXT(Interval__c) &amp; &quot; &quot;) &amp;
CASE(
    TEXT(Frequency__c),
    &quot;Daily&quot;, IF(Interval__c = 1, &quot;day&quot;, &quot;days&quot;),
    &quot;Weekly&quot;, IF(Interval__c = 1, &quot;week&quot;, &quot;weeks&quot;),
    &quot;Monthly&quot;, IF(Interval__c = 1, &quot;month&quot;, &quot;months&quot;),
    &quot;Yearly&quot;, IF(Interval__c = 1, &quot;year&quot;, &quot;years&quot;),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Description</label>
    <type>Text</type>
</CustomField>