brain/sources/prod-metadata/objects/Invoice__c/fields/Slack_Owner_Thread_Ts__c.field-meta.xml
<CustomField>
    <fullName>Slack_Owner_Thread_Ts__c</fullName>
    <inlineHelpText>Slack message timestamp of the owner DM thread root (first sales-receipt DM to the invoice owner). Used to thread later payment/update DMs.</inlineHelpText>
    <label>Slack Owner Thread Ts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>