brain/sources/prod-metadata/objects/Invoice__c/fields/Slack_Thread_Ts__c.field-meta.xml
<CustomField>
    <fullName>Slack_Thread_Ts__c</fullName>
    <inlineHelpText>Timestamp/ID of the first Slack message posted for this recurring plan. Used to thread follow-up messages.</inlineHelpText>
    <label>Slack Thread Ts</label>
    <length>50</length>
    <type>Text</type>
</CustomField>