brain/sources/prod-metadata/objects/Invoice__c/fields/Total_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Collected__c</fullName>
    <label>Total Amount Collected</label>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>