brain/sources/prod-metadata/objects/Invoice__c/fields/Total_Cycles_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Cycles_Completed__c</fullName>
    <label>Total Cycles Completed</label>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>