brain/sources/prod-metadata/objects/Invoice__c/fields/Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary__c</fullName>
    <formula>BLANKVALUE(Annual_Salary__c, 0) + BLANKVALUE(Bonus_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Salary + Bonus. Auto-calculated.</inlineHelpText>
    <label>Total Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>