brain/sources/prod-metadata/objects/Invoice__c/fields/Week_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Week_Of_Month__c</fullName>
    <label>Week of Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>